[package]
name = "vote-service"
version = "0.1.0"
authors = ["John Doe <kormick@rambler.ru>"]

[dependencies]
exonum = { version = "0.9.0", path = "../../exonum/exonum" }
failure = "0.1.2"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
ring = "*"
byteorder = "^1.2"
untrusted = "0.6.2"
lazy_static = "1.1.0"
toml = "=0.4.6"

[dev-dependencies]
exonum-testkit = { version = "0.9.0", path = "../../exonum/testkit" }